<resources>
    <string name="app_name">Lets Go To ATEITH</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="schools">
        <item>Stef</item>
        <item>Sdo</item>
        <item>Seyp</item>
    </string-array>

    <string-array name="people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="direction">
        <item>From ATEITH</item>
        <item>To ATEITH</item>
    </string-array>

    <string-array name="frequency">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="weekDaySpinner">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="areaSpinner">
        <item>East</item>
        <item>Center</item>
        <item>West</item>
    </string-array>

    <string-array name="timeSpinner">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="registerButton">Register</string>
    <string name="email_reg_explanation">Please remember that you can only use your ATEITH email address to register</string>
    <string name="next_button">Next</string>
    <string name="auth_failed">Sign in failed, have you entered your credentials correctly?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="facebook_link">Facebook link</string>
    <string name="action_register">Register</string>
    <string name="userInfo_fail">Failed to get user info, please try again later.</string>
    <string name="manage_transportations">Manage Transportations</string>
    <string name="i_own_a_car">I own a Car</string>
    <string name="i_am_looking_for_a_car">I am looking for a car</string>
    <string name="more_options">More options..</string>
    <string name="your_profile">Your profile</string>
    <string name="log_out">Log out</string>
    <string name="share_the_app">Share the app</string>
    <string name="about">About</string>
    <string name="title_activity_own_a_car">I own a car</string>
    <string name="ok">OK</string>
    <string name="internet_dialog_title">Internet Connectivity</string>
    <string name="internet_dialog_message">Are you connected to the internet? Make sure you are and try again.</string>
</resources>
