<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_manage"
            android:title="@string/manage_transportations" />
        <item
            android:id="@+id/nav_ownAcar"
            android:icon="@drawable/ic_steering_wheel"
            android:title="@string/i_own_a_car" />
        <item
            android:id="@+id/nav_looking"
            android:icon="@drawable/ic_doors"
            android:title="@string/i_am_looking_for_a_car" />

    </group>

    <item android:title="@string/more_options">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/your_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_the_app" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
